[package]
name = "FM"
version = "0.1.0"
edition = "2024"

[dependencies]
enigo = "0.6.1"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_UI", "Win32_UI_WindowsAndMessaging"] }
