[package]
name = "IM3_st"
version = "0.1.0"
edition = "2024"

[dependencies]
enigo = "0.6.1"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_UI", "Win32_UI_WindowsAndMessaging"] }
rand = "0.10.0-rc.5"
rdev = "0.5.3"

[profile.release]
codegen-units = 1
opt-level = "z"
lto=true
strip=true
panic = "abort"